--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,12 +1,16 @@
 nav {
   border-bottom: 1px solid gray;
+  background-color: aliceblue;
   width: 100%;
   position: fixed;
-  height: 15vh;
+  top: 0%;
+  background-origin: border-box;
+  height: 10vh;
+  opacity: 1;
 }
 .nav-container {
   list-style-type: none;
-  padding: 0.3rem 2rem;
+
   display: flex;
 }
 input {
@@ -26,10 +30,18 @@ li:nth-child(3) {
   width: 2px;
   height: 10vh;
 }
+.searchbar {
+  width: 100%;
+}
 
 img {
   max-width: 100%;
   height: 25px;
   object-fit: cover;
   object-position: bottom;
+}
+@media only screen and (max-width: 600px) {
+  li:nth-child(3) {
+    display: none;
+  }
 }
