added login page

--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -1,9 +1,10 @@
 .product-container {
-  border: 0.2rem solid black;
+  border: 0.1px solid black;
   margin: 0.5rem;
   max-width: 250px;
   height: 300px;
   padding: 0.3rem;
+  align-items: center;
 }
 .discription {
   white-space: nowrap;
@@ -14,15 +15,16 @@
   width: 100%;
   height: auto;
 }
-h3,
+.product-container > h3,
 h4,
 p {
   margin: 0.2rem;
 }
-h3 {
+.product-container > h3 {
   white-space: nowrap;
   overflow: hidden;
 }
-button {
+.product-container > button {
   width: 100%;
+  margin-top: auto;
 }
