--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,7 +1,12 @@
 .main {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
 
   padding: 1rem;
+}
+@media only screen and (max-width: 600px) {
+  .main {
+    flex-direction: column;
+    align-items: center;
+  }
 }
