--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,6 +1,11 @@
 .container {
-  margin-top: 10vh;
+  margin-top: 8vh;
   display: grid;
   grid-template-columns: 15% 84%;
   gap: 1%;
+}
+@media only screen and (max-width: 600px) {
+  .container {
+    grid-template-columns: 100%;
+  }
 }
