--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -1,8 +1,9 @@
 .product-container {
   border: 0.1px solid black;
   margin: 0.5rem;
-  max-width: 250px;
-  height: 300px;
+  max-width: 300px;
+
+  height: 250px;
   padding: 0.3rem;
   align-items: center;
 }
@@ -12,8 +13,8 @@
   text-overflow: ellipsis;
 }
 .product-img {
-  width: 100%;
-  height: auto;
+  max-width: 100%;
+  max-height: 100%;
 }
 .product-container > h3,
 h4,
