--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -15,20 +15,19 @@ nav {
 }
 .logo- {
   display: inline-block;
-  margin: auto 0;
+  margin: 0 auto;
+}
+li:nth-child(2) {
+  margin-left: auto;
 }
 
 li {
-  margin-right: 2rem;
+  margin-right: 1rem;
 }
 li:nth-child(2) {
-  margin-right: auto;
+  margin-right: 0;
 }
-li:nth-child(3) {
-  margin: 0 auto;
-  width: 30%;
-  align-items: center;
-}
+
 .img-container {
   width: 2px;
   height: 10vh;
@@ -49,16 +48,15 @@ img {
   nav {
     height: 8vh;
   }
-  li:nth-child(3) {
-    display: none;
-  }
+
   li:nth-child(2) {
-    display: none;
+    margin-left: auto;
   }
+
   .nav-container {
     padding-left: 1rem;
   }
-  li:nth-child(4) {
-    margin-left: auto;
+  li:nth-child(3) {
+    margin-left: 1rem;
   }
 }
