--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -17,6 +17,9 @@
 input {
   margin: 1rem 0px;
 }
+.sidebar-close {
+  display: none;
+}
 @media only screen and (max-width: 600px) {
   .sidebar {
     display: none;
@@ -33,6 +36,7 @@ input {
     display: block;
   }
   .sidebar-close {
+    display: block;
     position: absolute;
     right: 10%;
   }
